<resources>
    <string name="app_name">JobLess6_Firestor</string>
    <string name="myNotes">L3_Note_K2</string>
    <string name="gb_k">Geekbrains + Kotlin forever</string>
    <string name="maiak">Я Kotlin бы выучил только за то, что на нем разрабатывал Вортон!</string>
    <string name="mySnack">Пока просто кнопка</string>
    <string name="text_note">Текст заметки</string>
    <string name="title_note">Заголовок</string>
    <string name="new_note_title">Новая запись</string>
    <string name="no_data">Нет данных</string>
    <string name="_25">25 октября</string>
    <string name="_23_54">23:54</string>
    <string name="_137">137</string>
    <string name="div">/</string>
    <string name="_71">71</string>
    <string name="_59">59</string>
    <string name="hp">Верхнее давление</string>
    <string name="lp">Нижнее давление</string>
    <string name="p">Пульс</string>
    <string name="ok_bth_title">OK</string>
    <string name="save">Сохранить</string>
    <string name="press_pulse">Давление и пульс от 2 до 3 цифр</string>
</resources>